# spanish

./: .env  Cargo.toml
src/: main.rs
src/backend/database/: mod.rs  sentences.rs  words.rs
src/backend/database/db/: insert_words.sh  spanish.db
src/backend/game/: mod.rs  word_game.rs
src/backend/handlers/: mod.rs
src/backend/handlers/api_handlers/: mod.rs  sentences_handlers.rs  words_handlers.rs
src/backend/handlers/page_handlers/: mod.rs
src/backend/routes/: api_routes.rs  mod.rs  page_routes.rs
src/frontend/static/: index.html  manage-sentence-game.html  manage-word-game.html  sentence-game.html  word-game.html
src/frontend/static/pages/: global.css  index.html  manage-word-game.html  word-game.html
src/frontend/static/styles/: global.css
templates/: sentence-game-logic.html  sentences.html  words.html
