[package]
name = "spanish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.6.0"
env_logger = "0.11.3"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version= "0.7.4", features = [ "sqlite", "runtime-tokio", "tls-rustls"] }
dotenv = "0.15.0"
serde = "1.0.203"
serde_json = "1.0.117"
actix-cors = "0.7.0"
rand = "0.8.5"
askama = "0.12.1"

